# sophon

./: .buildinfo  .gitignore  Pipfile  README.md  docker-compose.yml  genindex.html  index.html  objects.inv  proxy_express.dbm  pyproject.toml  search.html  searchindex.js
.github/workflows/: analyze-codeql-backend.yml  analyze-codeql-frontend.yml  build-docker-backend.yml  build-docker-frontend.yml  build-docker-images.yml  build-docker-jupyter.yml  build-docker-proxy.yml  build-sphinx-report.yml  build-sphinx-thesis.yml
_sources/: index.rst.txt
_static/: documentation_options.js
backend/: .gitignore  Dockerfile  docker_start.sh  get_api_token.http  manage.py  pyproject.toml
backend/sophon/: admin.py  asgi.py  auth1.py  auth2.py  permissions.py  settings.py  urls.py  wsgi.py
backend/sophon/core/: __init__.py  admin.py  apps.py  enums.py  errors.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/sophon/core/management/commands/: initsuperuser.py
backend/sophon/core/migrations/: 0001_initial.py  0001_sources.json  0002_alter_researchgroup_options.py  0002_auto_20210415_1453.py  0003_auto_20210901_1529.py  0003_rename_id_dataflow_sdmx_id.py  0004_alter_dataflow_surrogate_id.py  0004_sophoninstancedetails.py  0005_auto_20210806_1506.py  0005_auto_20211016_0136.py  0006_alter_researchgroup_members.py  0006_auto_20210806_1918.py  0007_group_tag_ownership.py
backend/sophon/notebooks/: __init__.py  admin.py  apache.conf  apache.py  apps.py  docker.py  jupyter.py  models.py  tests.py  urls.py  validators.py  views.py
backend/sophon/notebooks/migrations/: 0001_initial.py  0002_auto_20210901_1527.py  0003_auto_20210905_0348.py  0004_auto_20210908_1108.py  0005_alter_notebook_port.py  0006_auto_20210908_1554.py  0007_alter_notebook_internet_access.py  0008_alter_notebook_container_image.py  0009_alter_notebook_slug.py  0010_auto_20211019_1738.py  0011_auto_20211019_1745.py  0012_alter_notebook_internal_url.py  0013_alter_notebook_container_image.py  0014_alter_notebook_container_image.py  0015_alter_notebook_container_image.py
backend/sophon/projects/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
backend/sophon/projects/migrations/: 0001_initial.py  0002_alter_researchproject_description.py
backend/sophon/templates/admin/: base.html
backend/tools/: create_project.http  get_api_token.http
docs/bibliografia/: index.html
frontend/: Dockerfile  package-lock.json  package.json
jupyter/: Dockerfile
proxy/: Dockerfile  httpd.conf
report/: Makefile
sophon/: auth.py  settings.py  urls.py
thesis/: Makefile  latex_index_remover.py
(+355 files in other folders)
