[tool.poetry]
name = "sophon"
version = "0.1.0"
description = "Django project for dataset collection"
authors = ["Stefano Pigozzi <256895@studenti.unimore.it>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
psycopg2 = "^2.8.6"
djangorestframework = "^3.12.4"
Markdown = "^3.3.4"
django-filter = "^2.4.0"
pydantic = "~1.7.3"
django-pam = "^2.0.0"
deprecation = "^2.1.0"
docker = "^5.0.2"
django-cors-headers = "^3.8.0"
uvicorn = "^0.15.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
