[tool.poetry]
name = "sophon"
version = "1.0.0"
description = "Django project for dataset collection"
authors = ["Stefano Pigozzi <256895@studenti.unimore.it>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
psycopg2 = "^2.8.6"
djangorestframework = "^3.12.4"
Markdown = "^3.3.4"
django-filter = "^2.4.0"
deprecation = "^2.1.0"
docker = "^5.0.2"
django-cors-headers = "^3.8.0"
gunicorn = "^20.1.0"
coloredlogs = "^15.0.1"
lazy-object-proxy = "^1.6.0"

[tool.poetry.dev-dependencies]
Sphinx = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-autobuild = "^2021.3.14"
rinohtype = "^0.5.3"
Pillow = "^8.4.0"
jsx-lexer = "^1.0.0"
sphinxcontrib-httpdomain = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
